# dlthub-init

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hatch_build.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
hooks/: secrets_guard.py
scripts/: generate_skills.py  pin_workspace_urls.py  update_skills.py
skills/deploy-minimal-custom-source/: SKILL.md
skills/dlthub-router/: SKILL.md
src/dlthub_init/: __init__.py  __main__.py  cli.py  collisions.py  config.py  display.py  errors.py  hooks.py  project_metadata.py  prompts.py  scaffold.py  skills.py  strings.py  telemetry.py  uv.py
src/dlthub_init/scaffolds/minimal_workspace/: .gitignore  pyproject.toml
src/dlthub_init/scaffolds/minimal_workspace/.dlt/: config.toml
tests/: test_cli.py  test_collisions.py  test_display.py  test_hooks.py  test_project_metadata.py  test_prompts.py  test_scaffold.py  test_scripts.py  test_skills.py  test_telemetry.py  test_uv.py
tests_integration/: test_e2e_workspace.py
