[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlthub-init"
version = "0.2.1"
description = "Scaffold a dltHub workspace into a new or existing directory."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "dltHub" },
]
classifiers = [
  "Development Status :: 4 - Beta",
]
dependencies = [
  "rich>=13.7",
  "beaupy>=3.9",
  "posthog>=3.7",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/dlt-hub/dlthub-init"
Repository = "https://github.com/dlt-hub/dlthub-init"
Issues = "https://github.com/dlt-hub/dlthub-init/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
dlthub-init = "dlthub_init.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["src/dlthub_init/scaffolds"]

[tool.ruff.lint]
extend-select = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
namespace_packages = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests", "tests_integration", "scripts"]
mypy_path = "scripts"
exclude = ["src/dlthub_init/scaffolds"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests_integration.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "beaupy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "posthog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dlthub_init"]

# Ship the single source-of-truth skills/ (repo root) into the wheel without a
# committed duplicate. Read back at runtime as dlthub_init/_bundled_skills.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "dlthub_init/_bundled_skills"
